--- a/osychov/Project/Web app/templates/weather.html
+++ b/osychov/Project/Web app/templates/weather.html
@@ -14,7 +14,7 @@
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    What's the weather like?
+                    Check the weather :)
                 </h1>
             </div>
         </div>
@@ -34,6 +34,9 @@
                                 </button>
                             </div>
                         </div>
+                        <div class="notification is-danger">
+                             Error message
+                          </div>
                     </form>
                 </div>
             </div>
