Add documentation for telegram bot

--- a/osychov/Project/Web app/templates/weather.html
+++ b/osychov/Project/Web app/templates/weather.html
@@ -68,8 +68,14 @@
                                     <p>
                                         <span class="title">{{ weather.city }}</span>
                                         <br>
-                                        <span class="subtitle">{{ weather.temperature }}° F</span>
-                                        <br> {{ weather.description }}
+                                        <span class="subtitle">{{ weather.temperature }}° C</span>
+                                        <br>
+                                        <span class="subtitle">{{ weather.description.capitalize() }}</span> 
+                                        <br> Feels like: {{weather.feel_like}} ° C
+                                        <br> Humidity: {{weather.humidity}} 
+
+
+                                        
                                     </p>
                                 </div>
                             </div>
